--- a/Resources/views/Person/Create/create.html.twig
+++ b/Resources/views/Person/Create/create.html.twig
@@ -1,5 +1,5 @@
 {% extends 'XideaPersonBundle::main.html.twig' %}
-{% block xidea_person_header_title %}
+{% block bundle_title %}
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">{{ 'person_create.title'|trans }}</h1>
@@ -8,7 +8,7 @@
     </div>
     <!-- /.row -->
 {% endblock %}
-{% block xidea_person_main %}
+{% block bundle_main %}
     <div class="row">
         <div class="col-lg-8">
             <div class="panel panel-default">
