--- a/Resources/views/Person/Show/show.html.twig
+++ b/Resources/views/Person/Show/show.html.twig
@@ -1,14 +1,14 @@
 {% extends 'XideaPersonBundle::main.html.twig' %}
-{% block xidea_person_header_title %}
+{% block bundle_title %}
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">{{ 'person_show.title'|trans({'%person_name%':model.name}) }}</h1>
+            <h1 class="page-header">{{ 'person_show.title'|trans({'%name%':model.name}) }}</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
     <!-- /.row -->
 {% endblock %}
-{% block xidea_person_main %}
+{% block bundle_main %}
     <div class="row">
         <div class="col-lg-8">
             <div class="panel panel-default">
