--- a/Resources/views/main.html.twig
+++ b/Resources/views/main.html.twig
@@ -1,7 +1,7 @@
 {% extends '::base.html.twig' %}
-{% block main %}
-    {% block xidea_person_header %}
-        {% block xidea_person_header_title %}{% endblock %}
-    {% endblock %}
-    {% block xidea_person_main %}{% endblock %}
+{% block page_title %}
+    {% block bundle_title %}{% endblock %}
+{% endblock%}
+{% block page_main %}
+    {% block bundle_main %}{% endblock %}
 {% endblock %}
