Updated bundle according to changes in base bundle

--- a/Resources/views/Person/Create/create.html.twig
+++ b/Resources/views/Person/Create/create.html.twig
@@ -11,7 +11,7 @@
                 </div>
                 <!-- /.panel-heading -->
                 <div class="panel-body">
-                    {{ include('XideaPersonBundle:Person/Create:form.html.twig') }}
+                    {{ include('XideaPersonBundle:Person/Form:form.html.twig') }}
                 </div>
                 <!-- /.panel-body -->
             </div>
