Updated template system

--- a/Resources/views/Person/Create/create.html.twig
+++ b/Resources/views/Person/Create/create.html.twig
@@ -1,4 +1,4 @@
-{% extends 'XideaPersonBundle::main.html.twig' %}
+{% extends xidea_template('person_main') %}
 {% block bundle_title %}
     <h1 class="page-header">{{ 'person_create.title'|trans }}</h1>
 {% endblock %}
@@ -11,7 +11,7 @@
                 </div>
                 <!-- /.panel-heading -->
                 <div class="panel-body">
-                    {{ include('XideaPersonBundle:Person/Form:form.html.twig') }}
+                    {{ include(xidea_template('person_form')) }}
                 </div>
                 <!-- /.panel-body -->
             </div>
