--- a/Resources/views/Person/List/list.html.twig
+++ b/Resources/views/Person/List/list.html.twig
@@ -1,4 +1,4 @@
-{% extends 'XideaPersonBundle::main.html.twig' %}
+{% extends xidea_template('person_main') %}
 {% block bundle_title %}
     <h1 class="page-header">{{ 'person_list.title'|trans }}</h1>
 {% endblock %}
