--- a/Resources/views/Person/Show/show.html.twig
+++ b/Resources/views/Person/Show/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'XideaPersonBundle::main.html.twig' %}
+{% extends xidea_template('person_main') %}
 {% block bundle_title %}
     <h1 class="page-header">{{ 'person_show.title'|trans({'%name%':model.name}) }}</h1>
 {% endblock %}
