--- a/Resources/views/Person/Show/show.html.twig
+++ b/Resources/views/Person/Show/show.html.twig
@@ -3,28 +3,26 @@
     <h1 class="page-header">{{ 'person_show.title'|trans({'%name%':model.name}) }}</h1>
 {% endblock %}
 {% block bundle_main %}
-    <div class="row">
-        <div class="col-lg-8">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    {{ 'person_show.details.title'|trans }}
-                </div>
-                <!-- /.panel-heading -->
-                <div class="panel-body">
-                    <table class="table table-bordered table-striped">
-                        <tbody>
-                          <tr>
-                            <th scope="row">
-                              <code>{{ 'person.name'|trans }}</code>
-                            </th>
-                            <td>{{ model.name }}</td>
-                          </tr>
-                        </tbody>
-                      </table>
-                </div>
-                <!-- /.panel-body -->
-            </div>
-            <!-- /.panel -->
+    <div class="box box-default person-box">
+        <div class="box-header">
+            <h3 class="box-title">{{ 'person_show.details.title'|trans }}</h3>
         </div>
+        <!-- /.box-heading -->
+        <div class="box-body">
+            <div class="person-details">
+                <table class="table table-bordered table-striped person-table">
+                    <tbody>
+                      <tr>
+                        <th scope="row">
+                          <code>{{ 'person.name'|trans }}</code>
+                        </th>
+                        <td>{{ model.name }}</td>
+                      </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <!-- /.box-body -->
     </div>
+    <!-- /.box -->
 {% endblock %}
